import React from 'react';
import renderer from 'react-test-renderer';

import ErrorDisplay from '.';

describe('ErrorDisplay component', () => {
  const actionTitle = 'do action';
  const onAction = jest.fn();
  const secondaryTitle = 'secondary title';
  const title = 'title';

  it('renders properly with just title', () => {
    const component = renderer.create(<ErrorDisplay
      title={title}
    />);

    expect(component).toMatchSnapshot();
  });

  it('renders properly with transparency', () => {
    const component = renderer.create(<ErrorDisplay
      title={title}
      transparent
    />);

    expect(component).toMatchSnapshot();
  });

  it('renders properly with title and secondary', () => {
    const component = renderer.create(<ErrorDisplay
      secondaryTitle={secondaryTitle}
      title={title}
    />);

    expect(component).toMatchSnapshot();
  });

  it('renders properly with title and action', () => {
    const component = renderer.create(<ErrorDisplay
      actionTitle={actionTitle}
      onAction={onAction}
      title={title}
    />);

    expect(component).toMatchSnapshot();
  });
});
