// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorDisplay component renders properly with just title 1`] = `
<div
  className="webex-error-display errorDisplay"
>
  <div
    className="webex-error-content content"
  >
    <div
      className="webex-error-title errorTitle contentItem"
    >
      title
    </div>
    
    
  </div>
</div>
`;

exports[`ErrorDisplay component renders properly with title and action 1`] = `
<div
  className="webex-error-display errorDisplay"
>
  <div
    className="webex-error-content content"
  >
    <div
      className="webex-error-title errorTitle contentItem"
    >
      title
    </div>
    
    <button
      className="webex-link-button linkButton"
      onClick={[Function]}
      onKeyPress={[Function]}
    >
      do action
    </button>
  </div>
</div>
`;

exports[`ErrorDisplay component renders properly with title and secondary 1`] = `
<div
  className="webex-error-display errorDisplay"
>
  <div
    className="webex-error-content content"
  >
    <div
      className="webex-error-title errorTitle contentItem"
    >
      title
    </div>
    <div
      className="webex-error-title-secondary secondaryTitle contentItem"
    >
      secondary title
    </div>
    
  </div>
</div>
`;

exports[`ErrorDisplay component renders properly with transparency 1`] = `
<div
  className="webex-error-display errorDisplay transparent"
>
  <div
    className="webex-error-content content"
  >
    <div
      className="webex-error-title errorTitle contentItem"
    >
      title
    </div>
    
    
  </div>
</div>
`;
